Mon Mar  4 09:31:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* main.m (main): Set to nil the listed test instances at startup;
	do not dealloc pools after termination of program.
	([Controller -dealloc]): Destroy the test instances.
	([Controller -loadAndStartTestWithBundlePath:]): Autorelease the
	returned object.
	([Controller -startListedTest:]): Retain the new bundle principal
	class instance.
	([Controller -applicationWillTerminate:]): New method.
	
Sat Feb 27 01:54:10 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* NSOutlineView-test/NSOutlineView-test.m:  Added code to test
	indentation in NSOutlineView.

Sat Feb 23 13:08:47 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* NSOutlineView-test/NSOutlineView-test.m:  Further improvements
	to this test bundle to exercise NSOutlineView.

Sat Feb 23 13:08:47 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* Added NSOutlineView-test.m to the test directory.

Wed Feb 20 19:28:52 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	Moved the memory panel into gnustep-gui so all apps have it.  To
	get the memory panel with new apps click on application icon in
	the info panel (works for any app).
	* MemoryPanel.m: Removed.
	* MemoryPanel.h: Removed.
	* main.m: Do not include MemoryPanel.h.
	(main): Do not add the memory panel submenu.
	* GNUmakefile: Do not compile MemoryPanel.m
	
Wed Jan 16 22:12:24 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* NSSlider-test/NSSlider-test.m ([-init]): Added enable/disable
	buttons to enable/disable the sliders.
	([-vEnabledChanged:], [-hEnabledChanged:]): New methods

2002-01-09  Adam Fedor  <fedor@gnu.org>

	* main.m (main): Remove main menu display.

Fri Dec 21 14:28:48 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* KeyboardInput-test/ConvertKeys.m: New file.
	* KeyboardInput-test/ConvertKeys.h: Idem.
	* KeyboardInput-test/GNUmakefile: Compile it.
	* KeyboardInput-test/KeyboardInput-test.m ([InputTestView